# dodecahedron

./: .coveragerc  .gitignore  Makefile  mypy.ini  pyproject.toml  setup.cfg  tox.ini
requirements/: base.txt  development.txt  testing.txt
src/dodecahedron/: __init__.py  cli.py  config.py  errors.py  handlers.py  helpers.py  json.py  messagebroker.py  messagebus.py  packages.py  queue.py  queues.py  settings.py
src/dodecahedron/adapters/: cli.py
src/dodecahedron/dispatchers/: __init__.py  abstract_dispatcher.py  base_dispatcher.py  progressive_dispatcher.py
src/dodecahedron/examples/environment/: __init__.py  environment_repository.py  variable_model.py
src/dodecahedron/examples/packaging/: __init__.py  package_model.py  package_repository.py
src/dodecahedron/listeners/: __init__.py  abstract_listener.py  redis_listener.py
src/dodecahedron/mappers/: __init__.py  abstract_mapper.py  class_mapper.py  dictionary_mapper.py  schema.py
src/dodecahedron/messagebrokers/: __init__.py  abstract_messagebroker.py  base_messagebroker.py  multiprocess_messagebroker.py
src/dodecahedron/messages/: __init__.py  command.py  event.py  message.py
src/dodecahedron/metaclasses/: __init__.py  message.py  repository.py  singleton.py  tracker.py
src/dodecahedron/models/: __init__.py  abstract_models.py  package.py  package_model.py
src/dodecahedron/progress/: __init__.py  abstract_progress_bar.py  tqdm_progress_bar.py
src/dodecahedron/publishers/: __init__.py  abstract_publisher.py  redis_publisher.py
src/dodecahedron/repositories/: __init__.py  abstract_repository.py  csv_repository.py  environment_repository.py  eventful_repository.py  file_repository.py  file_system_repository.py  package_repository.py  sessioned_repository.py  sqlalchemy_repository.py  txt_repository.py  xlsx_repository.py
src/dodecahedron/testing/: __init__.py  repositories.py  units_of_work.py
src/dodecahedron/units_of_work/: __init__.py  abstract_unit_of_work.py  eventful_unit_of_work.py  progressive_unit_of_work.py  sessioned_unit_of_work.py
src/dodecahedron/utils/: __init__.py  file_extension_utils.py  mapping_utils.py
src/dodecahedron/utils/parsers/: __init__.py  (+1 more)
src/dodecahedron/wrappers/: __init__.py  abstract_file_wrappers.py  csv_file_wrappers.py  json_file_wrappers.py  pdf_file_wrappers.py  txt_file_wrappers.py  xlsx_file_wrappers.py
tests/: __init__.py  conftest.py  factories.py
tests/boundary/: __init__.py  test_inspect_signature.py  test_multiprocessing.py
tests/integration/: __init__.py
tests/integration/examples/: __init__.py  test_environment_repository.py  test_package_repository.py
tests/integration/repositories/: __init__.py  conftest.py  test_csv_file_repository.py  test_csv_repository.py  test_eventful_repository.py  test_package_repository.py  test_txt_repository.py  test_xlsx_repository.py
tests/integration/wrappers/: __init__.py  test_csv_file_wrappers.py  test_json_file_wrappers.py  test_pdf_file_wrappers.py  test_txt_file_wrappers.py  test_xlsx_file_wrappers.py
tests/unit/: __init__.py  test_class_mapper.py  test_cli.py  test_config.py  test_dependency_injection.py  test_json_encoder.py  test_message_broker.py  test_message_brokers.py  test_message_queue.py  test_messagebus.py  test_messages.py
tests/unit/adapters/: __init__.py  test_cli.py
tests/unit/examples/: __init__.py  test_package_model.py
tests/unit/mappers/: __init__.py  test_class_mapper.py  test_dictionary_mapper.py  xtest_class_mapper.py
tests/unit/metaclasses/: __init__.py  test_singleton_metaclass.py  test_tracker_metaclass.py
tests/unit/models/: __init__.py  test_package_model.py
tests/unit/utils/: __init__.py  test_file_entension_utils.py  test_mapping_utils.py
(+28 files in other folders)
