[build-system]
requires = ["setuptools >= 44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dev-dependencies]
black = { version = "^22.10.0", python = "^3.9" }

[tool.black]
line-length = 79
target_version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | env
  )/
)
'''

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'pragma: no cover',
    '\.\.\.',
    'if TYPE_CHECKING:',
    "if __name__ == '__main__':",
]
