[metadata]
name = dodecahedron
version = attr: dodecahedron.__release__
author = Sean Sullivan
author_email = seansullivan@seanmedia.ca
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 0.1 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Natural Language :: English
	Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
	= src
packages = find:
install_requires =
	cachetools
	python-dateutil

[options.packages.find]
where = src

[options.extras_require]
database =
	SQLAlchemy
pandas =
	pandas
progress =
	tqdm
redis =
	redis
testing =
	coverage
	fpdf
	pytest
	pytest-cov
	pytest-env
	tox
	XlsxWriter
xlsx =
	openpyxl
